tests/ui/parser/struct-filed-with-attr.stderr
error: expected `,`, or `}`, found `#`
  --> $DIR/struct-filed-with-attr.rs:5:14
   |
LL |     owo: bool
   |              ^
   |
help: try adding a comma
   |
LL |     owo: bool,
   |              +

error: aborting due to 1 previous error

